nav-list visible fix tablet version version

--- a/css/header.css
+++ b/css/header.css
@@ -212,7 +212,7 @@
 
     .nav-list--show {
         left: 0;
-        padding-left: 250px;
+        padding-left: 200px;
     }
 
 
